# RiskAssessment

./: .gitignore  README.md  app.py  config.json  cronjob.txt  dvc_pull.sh  pyproject.toml  requirements.txt
.dvc/: config
RiskAssessment/: ingestion.py
RiskAssessment/utils/: logger.py
ingested_data/: .gitignore  final_data.csv.dvc  ingested_files.txt.dvc
models/: .gitignore  api_returns.txt  trained_model.pkl.dvc
practice_data/: .gitignore  dataset1.csv.dvc  dataset2.csv.dvc
practice_models/: .gitignore  api_returns.txt  latest_score.txt.dvc  trained_model.pkl.dvc
risk_assessment/: api_calls.py  common.py  deployment.py  diagnostics.py  full_process.py  ingestion.py  reporting.py  scoring.py  training.py
risk_assessment/utils/: common.py  logger.py
source_data/: .gitignore  dataset3.csv.dvc  dataset4.csv.dvc
test_data/: .gitignore  testdata.csv.dvc
