[tool.poetry]
name = "risk_assessment"
version = "0.1.0"
description = "Dynamically assess clients attrition risk"
authors = ["Abdulaziz Albuainain <albuainaina8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cycler = "0.10.0"
uvicorn = "0.23.0"
fastapi = "0.100.0"
gunicorn = "20.0.4"
itsdangerous = "1.1.0"
jinja2 = "2.11.3"
joblib = "1.0.1"
kiwisolver = "1.3.1"
markupsafe = "1.1.1"
matplotlib = "3.3.4"
numpy = "1.20.1"
pandas = "1.2.2"
pillow = "8.1.0"
pyparsing = "2.4.7"
python-dateutil = "2.8.2"
pytz = "2021.1"
scikit-learn = "0.24.1"
scipy = "1.6.1"
seaborn = "0.11.1"
six = "1.15.0"
sklearn = "0.0"
threadpoolctl = "2.1.0"
werkzeug = "1.0.1"
dvc = {version = "3.2.4", extras = ["gdrive"]}
pre-commit = "3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"